# auditwheel-symbols

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  update-auditwheel.yml
src/: main.rs  policy.rs
