[package]
name = "auditwheel-symbols"
version = "0.1.13"
authors = ["messense <messense@icloud.com>"]
edition = "2021"
description = "Find out which symbols are causing auditwheel too-recent versioned symbols error."
license = "MIT"
repository = "https://github.com/messense/auditwheel-symbols.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "2.5.0"
goblin = "0.6.0"
regex = "1.5.5"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
structopt = "0.3.21"
thiserror = "1.0.24"
zip = "0.6.3"
